# sogilis-katalog

./: .gitignore  .gitmodules  LICENSE  README.md
1-anagrams/elixir_anagrams/: .gitignore  README.md  mix.exs
1-anagrams/elixir_anagrams/config/: config.exs
1-anagrams/elixir_anagrams/lib/: elixir_anagrams.ex
1-anagrams/elixir_anagrams/test/: elixir_anagrams_test.exs
anagrams/: instructions.md
cartesian_enigma/: README.md  cartesian_enigma.sh
cartesian_enigma/cpp/: .gitignore  CMakeLists.txt  README.md
cartesian_enigma/cpp/libcartesian_enigma/: CMakeLists.txt  decoder.cpp  decoder.h
cartesian_enigma/cpp/main/: CMakeLists.txt  main.cpp
cartesian_enigma/cpp/test/: CMakeLists.txt  test_cartesian_enigma_decoder.cpp
cartesian_enigma/cpp_gtest/: CMakeLists.txt  Makefile  README.md  decoder.cpp  decoder.hpp  main.cpp  unit_tests.cpp
cartesian_enigma/rust/: Cargo.toml  README.md
cartesian_enigma/rust/src/: cartesian_test.rs  main.rs
cartesian_enigma/typescript/: package-lock.json  package.json  tsconfig.json
cartesian_enigma/typescript/src/: decoder.ts
jolly_jumper/: README.md  test_cases.txt
jolly_jumper/Ada/: Makefile  README.md
jolly_jumper/Ada/src/: check_jolly.adb
jolly_jumper/cpp/: .gitignore  Makefile
jolly_jumper/python/: Makefile  check_jolly.py
led_driver/: Readme.md
led_driver/C/: CMakeLists.txt  Readme.md
led_driver/C++/: CMakeLists.txt  Readme.md
led_driver/C++/inc/: ledDriver.hh
led_driver/C++/src/: ledDriver.cpp
led_driver/C++/test/: test_ledDriver.cpp
led_driver/C/src/: ledDriver.c
led_driver/C/test/: test_ledDriver.c
nucleo-board-from-scratch/: Readme.md
nucleo-board-from-scratch/C/: .gitignore  CMakeLists.txt  Dockerfile  Readme.md
nucleo-board-from-scratch/C/cmake/: cmocka.cmake  stm32f446retx.cmake  toolchain-arm-none-eabi.cmake  toolchain-native.cmake
nucleo-board-from-scratch/C/config/: nucleo-f446re.repl  nucleo-f446re.resc  stm32f446retx.cfg  stm32f446retx.ld
nucleo-board-from-scratch/C/lib/: CMakeLists.txt
nucleo-board-from-scratch/C/lib/led/: CMakeLists.txt  led.h
nucleo-board-from-scratch/C/src/: CMakeLists.txt  main.c
nucleo-board-from-scratch/C/test/: CMakeLists.txt
nucleo-board-from-scratch/C/test/led/: test_led.c
reverse_polish_notation/python/: Makefile  rpn.py  rpn.sh  simple_kata_tester.sh  test_cases.txt
roman_numerals/: test_cases.txt
roman_numerals/Ada/: Makefile  README.md
roman_numerals/C/: Makefile
roman_numerals/Kotlin/: build.gradle.kts
roman_numerals/c#/: .gitignore  README.md  RomanNumerals.cs  RomanNumerals.csproj  RomanNumerals.sln  RomanNumeralsTest.cs
roman_numerals/c#-NET6/: RomanNumerals.sln
roman_numerals/cpp/: Makefile
roman_numerals/csharp/: Makefile  README.md  roman_numerals.csproj
roman_numerals/go/: Makefile  README.md  main.go  main_test.go
roman_numerals/java/: README.md  build.gradle
roman_numerals/javascript/: .gitignore  Dockerfile  README.md  package-lock.json  package.json
roman_numerals/kotlin/: .gitignore  Makefile  README.md  build.gradle.kts  settings.gradle.kts
roman_numerals/python/: Makefile  README.md  Roman2Decimal.py  RomanNumeralTest.py  roman2decimal.py
roman_numerals/ruby/: .gitignore  Gemfile  README.md
roman_numerals/rust/: Cargo.toml  README.md
solid-principles/typescript/: README.md  jest.config.js  package.json
supermarket_receipt/: discount.py  offer.py  product.py  receipt.py  receipt_printer.py  shopping_cart.py  teller.py
supermarket_receipt/doc/: assignment.txt  supermarket_receipt.puml
supermarket_receipt/tests/: test_receipt_printer.py  test_supermarket.py
tricount/: README.md  solutions.json  tricounts.json
tricount/tricount-angular/: README.md  angular.json  package-lock.json  package.json
tricount/tricount-react/: package-lock.json  package.json
tricount/tricount-vue/: README.md  package-lock.json  package.json
tripservice/: Trip.py  TripDAO.py  TripService.py  TripService_Original.py  User.py  UserBuilder.py  UserSession.py  test_TripService.py  test_User.py
tripservice/doc/: tripservice.adoc  tripservice.txt
(+75 files in other folders)
